WebCore:

2009-06-09  Anand K. Mistry  <amistry@google.com>

        Reviewed by Dimitri Glazkov.

        Paint bitmaps with the alpha channel in Skia.
        https://bugs.webkit.org/show_bug.cgi?id=26037

        Test: fast/canvas/drawImage-with-globalAlpha.html

        * platform/graphics/skia/ImageSkia.cpp:
        (WebCore::paintSkBitmap):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (PlatformContextSkia::getAlpha):
        * platform/graphics/skia/PlatformContextSkia.h:

LayoutTests:

2009-06-09  Anand K. Mistry  <amistry@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=26037
        Test the globalAlpha property of canvas contexts.

        * fast/canvas/drawImage-with-globalAlpha.html: Added.
        * platform/mac/fast/canvas/drawImage-with-globalAlpha-expected.checksum: Added.
        * platform/mac/fast/canvas/drawImage-with-globalAlpha-expected.png: Added.
        * platform/mac/fast/canvas/drawImage-with-globalAlpha-expected.txt: Added.

Canonical link: https://commits.webkit.org/36362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44537 268f45cc-cd09-0410-ab3c-d52691b4dbfc