WebCore/platform/graphics/skia/ImageSkia.cpp
@@ -225,6 +225,12 @@ static void paintSkBitmap(PlatformContextSkia* platformContext, const NativeImag
     SkPaint paint;
     paint.setPorterDuffXfermode(compOp);
     paint.setFilterBitmap(true);
+    int alpha = roundf(platformContext->getAlpha() * 256);
+    if (alpha > 255)
+        alpha = 255;
+    else if (alpha < 0)
+        alpha = 0;
+    paint.setAlpha(alpha);
 
     skia::PlatformCanvas* canvas = platformContext->canvas();
 
