WebCore/platform/graphics/skia/PlatformContextSkia.cpp
@@ -428,6 +428,11 @@ int PlatformContextSkia::getTextDrawingMode() const
     return m_state->m_textDrawingMode;
 }
 
+float PlatformContextSkia::getAlpha() const
+{
+    return m_state->m_alpha;
+}
+
 void PlatformContextSkia::setTextDrawingMode(int mode)
 {
   // cTextClip is never used, so we assert that it isn't set:
